--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<form id="movie-database">
+<form id="movie-database" method="post">
     <div id="search">
         <input type="text" name="SearchTerms" value="@Model.SearchTerms" />
         <input type="submit" value="Search" />
@@ -32,9 +32,9 @@
         <h4>IMDB Rating</h4>
         <div>
             Between
-            <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" />
+            <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" value="@Model.IMDBMin" />
             and
-            <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="max" />
+            <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="max" value="@Model.IMDBMax"/>
         </div>
 
     </div>
